trunk/Archive2/f0/7e70a74ee12b2f/main.cpp
#include <stdlib.h>

struct Object {
    int color;
    Object() : color(rand()) { }
    void fillBg(int color = this->color);
};

int main() {
    Object();
}